--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                 <p>+62 8589 5548 5455</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.620137511196!2d110.37798021459854!3d-7.829966994357988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a57a78a402529%3A0x9a571ad5acf59efc!2sJl.%20Ki%20Ageng%20Pemanahan%2C%20Daerah%20Istimewa%20Yogyakarta!5e0!3m2!1sen!2sid!4v1642491124871!5m2!1sen!2sid" style="border:0; width: 100%; height: 290px;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.620137511196!2d110.37798021459854!3d-7.829966994357988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a57a78a402529%3A0x9a571ad5acf59efc!2sJl.%20Ki%20Ageng%20Pemanahan%2C%20Daerah%20Istimewa%20Yogyakarta!5e0!3m2!1sen!2sid!4v1642491124871!5m2!1sen!2sid" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
